CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(xpjson_ut)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
FIND_PACKAGE(GTest REQUIRED)

include_directories(${GTEST_INCLUDE_DIRS})

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    FIND_PACKAGE(Threads REQUIRED)
    LINK_LIBRARIES(gtest pthread)

    SET(CMAKE_BUILD_TYPE "Debug")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    LINK_LIBRARIES(gtest)
    SET(CompilerFlags
        CMAKE_CXX_FLAGS
        CMAKE_CXX_FLAGS_DEBUG
        CMAKE_CXX_FLAGS_RELEASE
        CMAKE_C_FLAGS
        CMAKE_C_FLAGS_DEBUG
        CMAKE_C_FLAGS_RELEASE
        )
    FOREACH(CompilerFlag ${CompilerFlags})
        string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
        string(REPLACE "/MTd" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
    ENDFOREACH()
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

ENABLE_TESTING()
ADD_EXECUTABLE(xpjson_ut ${DIR_SRCS})
ADD_TEST(UT xpjson_ut)

ADD_DEFINITIONS(-D__XPJSON_SUPPORT_DANGLING_COMMA__=1)
ADD_EXECUTABLE(xpjson_dangling_comma_ut ${DIR_SRCS})
ADD_TEST(DANGLING_COMMA xpjson_dangling_comma_ut)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb -std=c++0x")  
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++0x")
    ADD_DEFINITIONS(-D_GXX_EXPERIMENTAL_CXX0X__)
    ADD_EXECUTABLE(xpjson_cxx0x_ut ${DIR_SRCS})
    ADD_TEST(C++11 xpjson_cxx0x_ut)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
